--- a/style.css
+++ b/style.css
@@ -61,8 +61,9 @@ font-weight: 500;
     font-size: 24px;
     color:black;
     float: right;
-    line-height: 80px;
-    margin-right: 40px;
+/*     line-height: 80px; */
+    margin-right: 25px;
+    margin-top:22px
     cursor: pointer;
     display: none;
 
