--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ font-weight: 500;
     font-size: 24px;
     color:black;
     float: right;
-/*     line-height: 80px; */
+    line-height: 80px; 
     margin-right: 25px;
     margin-top:22px
     cursor: pointer;
